k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-auth-service
  template:
    metadata:
      labels:
        app: frontend-auth-service
    spec:
      containers:
      - name: frontend-auth-service
        image: hordansodevops/reseller_customer_frontend_auth:latest
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
