k8s/domain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-domain-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-domain-service
  template:
    metadata:
      labels:
        app: frontend-domain-service
    spec:
      containers:
      - name: frontend-domain-service
        image: hordansodevops/reseller_customer_frontend_domain:latest
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
