k8s/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-main-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-main-service
  template:
    metadata:
      labels:
        app: frontend-main-service
    spec:
      containers:
      - name: frontend-main-service
        image: hordansodevops/reseller_customer_frontend_main:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
