k8s/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-store-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-store-service
  template:
    metadata:
      labels:
        app: frontend-store-service
    spec:
      containers:
      - name: frontend-store-service
        image: hordansodevops/reseller_customer_frontend_store:latest
        ports:
        - containerPort: 3030
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3030
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3030
          initialDelaySeconds: 5
          periodSeconds: 3
