k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-api-service
spec:
  selector:
    app: frontend-api-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3011
