k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-auth-service
spec:
  selector:
    app: frontend-auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
