k8s/domain-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-domain-service
spec:
  selector:
    app: frontend-domain-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
