k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-main-service
spec:
  selector:
    app: frontend-main-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
