k8s/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-payments-service
spec:
  selector:
    app: frontend-payments-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
