k8s/settings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-settings-service
spec:
  selector:
    app: frontend-settings-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
