k8s/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-store-service
spec:
  selector:
    app: frontend-store-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
